--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,19 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Will Wallace
+email: info@willwallace.name
+tagline: Graphic design & front-end development
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Will Wallace is a freelance graphic designer and front-end web developer based in Reading, UK.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://willwallace.name" # the base hostname & protocol for your site
+twitter_username: wiiiiilllllll
+github_username:  wiiiiilllllll
 
 # Build settings
 markdown: kramdown
+
+# Sass settings
+sass:
+  style: compressed
